# tiralabra-2022-tic-tac-toe

./: . coveragerc  .gitignore  README.md  pyproject.toml
docs/: implementation.md  requirements.md  test-document.md  use-guidlines.md
docs/weekly-raports/: week-2.md  week-3.md  week-5.md  week-6.md
documentation/: requirements.md
documentation/weekly-raports/: week-1.md
src/: board.py  bot.py  constants.py  game.py  main.py  minimax.py  minimaxBasic.py  player.py  ui.py
src/tests/: player_test.py
