[tool.poetry]
name = "tiralabra-2022-tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["Hamid Aebadi <hamidebadi1996@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
